-*- mode: outline -*-

* Changes since version 0.45

** new features

Added the Argon2d key derivation function (without parallelism).

* Version 0.45, released 2019-02-18

** bug fixes

Pseudo-random number generation is now thread safe, but only when the threads
are created with the bordeaux-threads library.

** new features

Added the SM3 digest (GM/T 0004-2012).

Added the SM4 cipher (GM/T 0002-2012).

Added the SipHash MAC.

* Version 0.44, released 2018-11-03

** new features

Added the EAX authenticated encryption scheme.

Added support of 256, 512 and 1024 bit block ciphers to CMAC.

Added the Kalyna128, Kalyna256 and Kalyna512 block ciphers (DSTU 7624:2014)

Added the Kupyna and Kupyna/256 digests (DSTU 7564:2014)

Some optimizations for Chacha and Salsa for ECL.

Some optimizations for Poly1305 for ECL.

* Version 0.43, released 2018-09-14

** new features

Added support for PKCS7, ANSI X.923 and ISO 7816-4 padding schemes when
encrypting or decrypting in ECB or CBC mode.

Added support for CFB, CFB8 and OFB modes to encrypting/decrypting streams.

Added the GMAC authentication code.

Added the GCM (Galois counter mode) and ETM (Encrypt then MAC) authenticated
encryption schemes.

Some optimizations for CMAC and Poly1305.

Some optimizations for CBC, CFB, CTR and OFB modes.

Some optimizations for Skein.

* Version 0.42, released 2018-08-09

** bug fixes

Fixed loading with SBCL versions newer than 1.4.10

Fixed wrong decryption when using the decrypt-in-place function with a block
cipher in CFB mode.

** new features

The encrypt-message and decrypt-message methods can be used with ciphers (in
addition to public or private keys).

Some optimizations for ed25519 and ed448.

* Version 0.41, released 2018-07-30

** new features

Added the original Keccak digests (SHA3 with a different padding).

Added the Streebog digests (GOST R 34.11-2012).

Added the Kuznyechik block cipher (GOST R 34.12-2015).

* Version 0.40, released 2018-06-20

** new features
